--- a/Index.html
+++ b/Index.html
@@ -1,1 +1,106 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>City Images App</title>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+    }
+
+    #city-input, #search-button {
+      margin-bottom: 10px;
+    }
+
+    #city-images-container img {
+      max-width: 100%;
+      height: auto;
+      margin-bottom: 10px;
+    }
+  </style>
+  <!-- Include jQuery library -->
+  <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
+</head>
+<body>
+
+  <input type="text" id="city-input" placeholder="Enter City">
+  <button id="search-button">Search</button>
+  <div id="city-images-container"></div>
+
+  <script>
+    $(document).ready(function() {
+      const weatherApiBaseUrl = "https://api.openweathermap.org/data/2.5/weather";
+      const openWeatherMapApiKey = "YOUR_OPENWEATHERMAP_API_KEY"; // Replace with your API key
+
+      const articleBaseUrl = "https://api.nytimes.com/svc/search/v2/articlesearch.json";
+      const nyTimesApiKey = "YOUR_NYTIMES_API_KEY"; // Replace with your API key
+
+      const cityImagesBaseUrl = "https://api.teleport.org/api/urban_areas";
+      const cityInput = $("#city-input");
+      const searchButton = $("#search-button");
+      const cityImagesContainer = $("#city-images-container");
+
+      searchButton.on("click", function () {
+        const cityName = cityInput.val().trim();
+        if (cityName !== "") {
+          const weatherApiUrl = `${weatherApiBaseUrl}?q=${cityName}&appid=${openWeatherMapApiKey}`;
+          const articlesApiUrl = `${articleBaseUrl}?api-key=${nyTimesApiKey}&q=${cityName}`;
+          const cityImagesApiUrl = `${cityImagesBaseUrl}/${cityName.toLowerCase()}/images/`;
+
+          fetchCityData(weatherApiUrl, cityName);
+          fetchArticlesData(articlesApiUrl);
+          fetchCityImages(cityImagesApiUrl);
+        } else {
+          alert("Please enter a city name.");
+        }
+      });
+
+      function fetchCityData(apiUrl, cityName) {
+        fetch(apiUrl)
+          .then(response => response.json())
+          .then(data => {
+            // Process weather data as needed
+            console.log("Weather data for", cityName, ":", data);
+          })
+          .catch(error => console.error("Error fetching weather data:", error));
+      }
+
+      function fetchArticlesData(apiUrl) {
+        fetch(apiUrl)
+          .then(response => response.json())
+          .then(data => {
+            // Process articles data as needed
+            console.log("Articles data:", data);
+          })
+          .catch(error => console.error("Error fetching articles data:", error));
+      }
+
+      function fetchCityImages(apiUrl) {
+        $.ajax({
+          url: apiUrl,
+          method: "GET",
+          dataType: "json",
+          success: function(data) {
+            // Process city images data as needed
+            console.log("City images data:", data);
+            displayCityImages(data, cityImagesContainer);
+          },
+          error: function(error) {
+            console.error("Error fetching city images:", error);
+          }
+        });
+      }
+
+      function displayCityImages(data, container) {
+        // Assuming data is an array of image URLs
+        data.photos.forEach(photo => {
+          const img = $("<img>").attr("src", photo.image.web);
+          container.append(img);
+        });
+      }
+    });
+  </script>
+</body>
+</html>
