--- a/index.html
+++ b/index.html
@@ -31,11 +31,16 @@
 
   <script>
     $(document).ready(function() {
-      const weatherApiBaseUrl = "https://api.openweathermap.org/data/2.5/weather";
-      const openWeatherMapApiKey = "YOUR_OPENWEATHERMAP_API_KEY"; // Replace with your API key
+      // API keys
+const openWeatherMapApiKey = "ebb88b956bf8c05653e9de0ca2230d40";
+const nyTimesApiKey = "uDC9FtINoMvYp08zQbOiSeHxUhancoEb";
 
-      const articleBaseUrl = "https://api.nytimes.com/svc/search/v2/articlesearch.json";
-      const nyTimesApiKey = "YOUR_NYTIMES_API_KEY"; // Replace with your API key
+// API URLs
+const baseUrl = "https://api.openweathermap.org/data/2.5/forecast";
+const articleBaseUrl = "https://api.nytimes.com/svc/search/v2/articlesearch.json";
+
+// Rest of your JavaScript code goes here
+
 
       const cityImagesBaseUrl = "https://api.teleport.org/api/urban_areas";
       const cityInput = $("#city-input");
