--- a/index.html
+++ b/index.html
@@ -31,6 +31,6 @@
     </aside>
   </div>
   <footer id="footer"> <p>MIT License | Copyright (c) 2023 Aijamal Jusupova</p></footer>
-  <script src="new-weather-dashboard.js"></script>
+  <script src="main.js"></script>
 </body>
 </html>
